--- a/config/default.yaml
+++ b/config/default.yaml
@@ -4,13 +4,13 @@ common:
   load_weight: outputs/sample/sample_weight
   log_path: tensorboard
 model:
-  name: DQN
+  name: DQNv2
 state:
   dim: 4
 train:
-  optimizer: Adam  #Adam or SGD
+  optimizer: Adam #Adam or SGD
   lr: 1e-3
-  lr_gamma: 0.1 
+  lr_gamma: 0.1
   lr_momentum: 0.99
   lr_step_size: 1000
   replay_memory_size: 30000
@@ -28,16 +28,22 @@ train:
   target_copy_intarval: 250
   max_penalty: -1
   reward_list: #These parameter are not normalized.
-    - 0  #survival
+    - 0 #survival
     - 100 #1block
     - 300 #2block
     - 700 #3block
     - 1300 #4block
     - -1300 #game over
   reward_weight: #These parameter are used for DQN_v2
-    - 0.001 #bampiness 
+    - 0.001 #bampiness
     - 0.01 #max height
     - 0.01 #hole_num
+  reward_boarder_ratio: 0.5
+  reward_list_2: # reward for upper area
+    - 0 #survival
+    - 1000 # one line
+    - 500 # two lines
+    - 100 # three lines
 tetris:
   board_height: 22
   board_width: 10
